add test footer

--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 	<title>Pets - Home</title>
 	<head>
 		<link rel="stylesheet" href="bootstrap.min.css">
+		<link rel="stylesheet" href="style.css">
 		<script src="https://kit.fontawesome.com/e2fda2ad6c.js" crossorigin="anonymous"></script>
 <div class="bs-component">
               <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -31,7 +32,7 @@
 		Pets
 		</h1>
 		<p>A small site for my favorite pets</p>
-		<i class="fas fa-dog"></i>		
+		<i class="fas fa-dog pets-large-icon"></i>		
 	</body>
 	<footer>
 		Theme from <a href="https://bootswatch.com/">Bootswatch</a>
