--- a/home.html
+++ b/home.html
@@ -32,7 +32,10 @@
 		Pets
 		</h1>
 		<p>A small site for my favorite pets</p>
-		<i class="fas fa-dog pets-large-icon"></i>		
+    <i class="fas fa-dog pets-large-icon grow"></i>
+    <i class="fas fa-cat pets-large-icon
+    grow"></i>
+    <i class="fas fa-fish pets-large-icon grow"></i>		
 	</body>
 	<footer>
 		Theme from <a href="https://bootswatch.com/">Bootswatch</a>
