--- a/home.html
+++ b/home.html
@@ -5,39 +5,48 @@
 		<link rel="stylesheet" href="bootstrap.min.css">
 		<link rel="stylesheet" href="style.css">
 		<script src="https://kit.fontawesome.com/e2fda2ad6c.js" crossorigin="anonymous"></script>
-<div class="bs-component">
-              <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                <a class="navbar-brand" href="#">Pets</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarColor01">
-                  <ul class="navbar-nav mr-auto">                    
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Dogs</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Cats</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Fish</a>
-                    </li>                    
-                  </ul>                  
-                </div>
-              </nav>            
 	</head>
-	</body>
-		<h1>
-		Pets
-		</h1>
-		<p>A small site for my favorite pets</p>
-    <i class="fas fa-dog pets-large-icon grow"></i>
-    <i class="fas fa-cat pets-large-icon
-    grow"></i>
-    <i class="fas fa-fish pets-large-icon grow"></i>		
-	</body>
-	<footer>
-		Theme from <a href="https://bootswatch.com/">Bootswatch</a>
-	</footer>
+  </body>
+    <div class="bs-component">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Pets</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav mr-auto">                    
+            <li class="nav-item">
+              <a class="nav-link" href="#">Dogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Cats</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Fish</a>
+            </li>                    
+          </ul>                  
+        </div>
+      </nav> 
+    </div>        
+
+    <div class="container">
+      <h1>
+        Pets
+      </h1>
+      <p>A small site for my favorite pets</p>
+      <i class="fas fa-dog pets-large-icon grow"></i>
+      <i class="fas fa-cat pets-large-icon
+      grow"></i>
+      <i class="fas fa-fish pets-large-icon grow"></i>	
+    
+
+      <footer>      
+        Theme from <a href="https://bootswatch.com/">Bootswatch</a>      
+      </footer>	 
+    </div>
+
+    
+  
+	</body>	
 </html>
