--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
   </body>
     <div class="bs-component">
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Pets</a>
+        <a class="navbar-brand" href="home.html">Pets</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
               <a class="nav-link" href="#">Dogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cats</a>
+              <a class="nav-link" href="cat.html">Cats</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Fish</a>
