--- a/home.html
+++ b/home.html
@@ -41,9 +41,9 @@
       <i class="fas fa-fish pets-large-icon grow"></i>	
     
 
-      <footer>      
-        Theme from <a href="https://bootswatch.com/">Bootswatch</a>      
-      </footer>	 
+      <footer class="footer">      
+        Check out my other stuff at <a href="https://github.com/lalugue">Github</a> - Theme from <a href="https://bootswatch.com/">Bootswatch</a>      
+      </footer>	  
     </div>
 
     
