--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
           <ul class="navbar-nav mr-auto">                    
             <li class="nav-item">
-              <a class="nav-link" href="#">Dogs</a>
+              <a class="nav-link" href="dog.html">Dogs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="cat.html">Cats</a>
