link icons to pages

--- a/home.html
+++ b/home.html
@@ -35,10 +35,15 @@
         Pets
       </h1>
       <p>A small site for my favorite pets</p>
+      <a href="dog.html">
       <i class="fas fa-dog pets-large-icon grow"></i>
-      <i class="fas fa-cat pets-large-icon
-      grow"></i>
-      <i class="fas fa-fish pets-large-icon grow"></i>	
+      </a>
+      <a href="cat.html">
+      <i class="fas fa-cat pets-large-icon grow"></i>
+    </a>
+    <a href="fish.html">
+      <i class="fas fa-fish pets-large-icon grow"></i>
+      </a>	
     
 
       <footer class="footer">      
