update dog page

--- a/dog.html
+++ b/dog.html
@@ -32,11 +32,11 @@
 
     <div class="container">
       <h1>
-        Cats
+        Dogs
       </h1>
-      <p>Cats are charming. They like to explore when no one is looking.</p>
+      <p>Dogs are loyal. They like to sniff stuff.</p>
       
-      <i class="fas fa-cat pets-large-icon"></i> 
+      <i class="fas fa-dog pets-large-icon"></i> 
 
       <footer class="footer">      
         Check out my other stuff at <a href="https://github.com/lalugue">Github</a> - Theme from <a href="https://bootswatch.com/">Bootswatch</a>      
