--- a/dog.html
+++ b/dog.html
@@ -23,7 +23,7 @@
               <a class="nav-link" href="cat.html">Cats</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Fish</a>
+              <a class="nav-link" href="fish.html">Fish</a>
             </li>                    
           </ul>                  
         </div>
