change page title

--- a/dog.html
+++ b/dog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<title>Pets - Home</title>
+	<title>Pets - Dog</title>
 	<head>
 		<link rel="stylesheet" href="bootstrap.min.css">
 		<link rel="stylesheet" href="style.css">
@@ -34,6 +34,7 @@
       <h1>
         Dogs
       </h1>
+
       <p>Dogs are loyal. They like to sniff stuff.</p>
       
       <i class="fas fa-dog pets-large-icon"></i> 
