--- a/fish.html
+++ b/fish.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<title>Pets - Home</title>
+	<title>Pets - Fish</title>
 	<head>
 		<link rel="stylesheet" href="bootstrap.min.css">
 		<link rel="stylesheet" href="style.css">
@@ -31,6 +31,7 @@
     </div>        
 
     <div class="container">
+
       <h1>
         Fish
       </h1>
