--- a/cat.html
+++ b/cat.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<title>Pets - Home</title>
+	<title>Pets - Cat</title>
 	<head>
 		<link rel="stylesheet" href="bootstrap.min.css">
 		<link rel="stylesheet" href="style.css">
@@ -31,6 +31,7 @@
     </div>        
 
     <div class="container">
+
       <h1>
         Cats
       </h1>
