change reference to folder

--- a/dog.html
+++ b/dog.html
@@ -2,8 +2,8 @@
 <html>
 	<title>Pets - Dog</title>
 	<head>
-		<link rel="stylesheet" href="bootstrap.min.css">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="styles/bootstrap.min.css">
+		<link rel="stylesheet" href="styles/style.css">
 		<script src="https://kit.fontawesome.com/e2fda2ad6c.js" crossorigin="anonymous"></script>
 	</head>
   </body>
