--- a/home.html
+++ b/home.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html>
-	<title>Pets - Home</title>
-	<head>
-		<link rel="stylesheet" href="styles/bootstrap.min.css">
-		<link rel="stylesheet" href="styles/style.css">
-		<script src="https://kit.fontawesome.com/e2fda2ad6c.js" crossorigin="anonymous"></script>
-	</head>
-  </body>
+  <title>Pets - Home</title>
+  <head>
+    <link rel="stylesheet" href="styles/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/e2fda2ad6c.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <div class="bs-component">
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="home.html">Pets</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarColor01"
+          aria-controls="navbarColor01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav mr-auto">                    
+          <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="dog.html">Dogs</a>
             </li>
@@ -24,16 +35,14 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Fish</a>
-            </li>                    
-          </ul>                  
+            </li>
+          </ul>
         </div>
-      </nav> 
-    </div>        
+      </nav>
+    </div>
 
     <div class="container">
-      <h1>
-        Pets
-      </h1>
+      <h1>Pets</h1>
       <p>A small site for my favorite pets</p>
 
       <a href="dog.html">
@@ -44,14 +53,13 @@
       </a>
       <a href="fish.html">
         <i class="fas fa-fish pets-large-icon grow"></i>
-      </a>	    
+      </a>
 
-      <footer class="footer">      
-        Check out my other stuff at <a href="https://github.com/lalugue">Github</a> - Theme from <a href="https://bootswatch.com/">Bootswatch</a>      
-      </footer>	  
+      <footer class="footer">
+        Check out my other stuff at
+        <a href="https://github.com/lalugue">Github</a> - Theme from
+        <a href="https://bootswatch.com/">Bootswatch</a>
+      </footer>
     </div>
-
-    
-  
-	</body>	
+  </body>
 </html>
