--- a/cat.html
+++ b/cat.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="container">
-      <h1>Cats</h1>
+      <h1>Cat</h1>
       <p>Cats are charming. They like to explore when no one is looking.</p>
 
       <i class="fas fa-cat pets-large-icon"></i>
