--- a/dog.html
+++ b/dog.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="container">
-      <h1>Dogs</h1>
+      <h1>Dog</h1>
 
       <p>Dogs are loyal. They like to sniff stuff.</p>
 
